--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -229,6 +229,12 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.176</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1201-jdbc41</version>
+		</dependency>
+
 
 		<!-- Running example processes -->
 		<dependency>
