addded button for authorization, added route for authorization, added session config for the future purposes, added external-ip lib, changed 8080 to 8081 port in pom.xml

--- a/portal-dniprorada/package.json
+++ b/portal-dniprorada/package.json
@@ -15,7 +15,8 @@
     "lodash": "~2.4.1",
     "ejs": "~0.8.4",
     "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.4.1"
+    "connect-mongo": "^0.4.1",
+    "external-ip":"0.2.3"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
