--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -265,6 +265,13 @@
 			<artifactId>dcharts-widget</artifactId>
 			<version>0.10.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		
 
 	</dependencies>
 	<version>5.17.0</version>
