--- a/portal-dniprorada/package.json
+++ b/portal-dniprorada/package.json
@@ -10,6 +10,11 @@
     "serve-favicon": "~2.0.1",
     "cookie-parser": "~1.0.1",
     "express-session": "~1.0.2",
+    "passport": "~0.2.0",
+    "jsonwebtoken": "^0.3.0",
+    "passport-http-bearer": "1.0.1",
+    "passport-oauth2":"1.1.2",
+    "express-jwt": "^0.1.3",
     "errorhandler": "~1.0.0",
     "compression": "~1.0.1",
     "lodash": "~2.4.1",
