added request lib usage, added client data retrieving from bankID, but it is in xml format for now

--- a/portal-dniprorada/package.json
+++ b/portal-dniprorada/package.json
@@ -21,7 +21,8 @@
     "ejs": "~0.8.4",
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1",
-    "external-ip":"0.2.3"
+    "external-ip":"0.2.3",
+    "request":"2.54.0"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
