--- a/portal-dniprorada/package.json
+++ b/portal-dniprorada/package.json
@@ -22,7 +22,8 @@
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1",
     "external-ip":"0.2.3",
-    "request":"2.54.0"
+    "request":"2.54.0",
+    "xml2js":"0.4.6"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
