--- a/portal-dniprorada/package.json
+++ b/portal-dniprorada/package.json
@@ -23,7 +23,8 @@
     "connect-mongo": "^0.4.1",
     "external-ip":"0.2.3",
     "request":"2.54.0",
-    "xml2js":"0.4.6"
+    "xml2js":"0.4.6",
+    "log4js":"0.6.22"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
