--- a/wf-dniprorada/src/main/resources/email.properties
+++ b/wf-dniprorada/src/main/resources/email.properties
@@ -1,7 +1,7 @@
-mailServerHost=
-mailServerPort=
-mailServerDefaultFrom=
-mailServerUsername=
-mailServerPassword=
+mailServerHost=smtp.gmail.com
+mailServerPort=465
+mailServerDefaultFrom=dnipro.egov.test.ua@gmail.com
+mailServerUsername=dnipro.egov.test.ua
+mailServerPassword=dnipro.egov.tes
 mailServerUseSSL=true
 mailServerUseTLS=true
