--- a/wf-dniprorada/src/main/resources/bankID.properties
+++ b/wf-dniprorada/src/main/resources/bankID.properties
@@ -1,4 +1,4 @@
-checkBankIDUrl=https://bankid.privatbank.ua/DataAccessService/checked/fio?access_token=%$client_id=%
+checkBankIDUrl=https://bankid.privatbank.ua/DataAccessService/checked/fio?access_token=%s$client_id=%s
 firstNameElementName=firstName
 lastNameElementName=lastName
 middleNameElementName=middleName
