--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -207,6 +207,11 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>commons-codec</groupId> -->
+<!-- 			<artifactId>commons-codec</artifactId> -->
+<!-- 			<version>20041127.091804</version> -->
+<!-- 		</dependency> -->
 
 		<!-- REST API -->
 		<dependency>
@@ -267,13 +272,13 @@
 			<artifactId>dcharts-widget</artifactId>
 			<version>0.10.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
+
 
 	</dependencies>
 	<version>5.17.0</version>
