--- a/wf-dniprorada/src/main/resources/bankID.properties
+++ b/wf-dniprorada/src/main/resources/bankID.properties
@@ -1,4 +1,4 @@
-checkBankIDUrl=https://bankid.privatbank.ua/DataAccessService/checked/fio?access_token=%s$client_id=%s
+checkBankIDUrl=https://bankid.privatbank.ua/DataAccessService/checked/fio?access_token=%s&client_id=%s
 systemClient=p48app
 firstNameElementName=firstName
 lastNameElementName=lastName
