--- a/wf-dniprorada/src/main/webapp/WEB-INF/web.xml
+++ b/wf-dniprorada/src/main/webapp/WEB-INF/web.xml
@@ -23,25 +23,30 @@
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
 
+  
+    <!--filter>
+        <filter-name>JSONPFilter</filter-name>
+        <filter-class>org.activiti.explorer.servlet.JsonpCallbackFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>JSONPFilter</filter-name>
+        <url-pattern>/service/*</url-pattern>
+        <url-pattern>/rest/*</url-pattern>
+    </filter-mapping-->
+
+<!--
+        @WebFilter(filterName = "UIFilter", urlPatterns = {"/*"})
+-->
 	<filter>
 		<filter-name>UIFilter</filter-name>
 		<filter-class>org.activiti.explorer.filter.ExplorerFilter</filter-class>
 	</filter>
-  
-    <filter>
-        <filter-name>JSONPFilter</filter-name>
-        <filter-class>org.activiti.explorer.servlet.JsonpCallbackFilter</filter-class>
-    </filter>
 
 	<filter-mapping>
 		<filter-name>UIFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-  
-    <filter-mapping>
-        <filter-name>JSONPFilter</filter-name>
-        <url-pattern>/service/*</url-pattern>
-    </filter-mapping>
 
 	<servlet>
 		<servlet-name>Vaadin Application Servlet</servlet-name>
@@ -55,10 +60,6 @@
 	<servlet-mapping>
 		<servlet-name>Vaadin Application Servlet</servlet-name>
 		<url-pattern>/ui/*</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>Vaadin Application Servlet</servlet-name>
 		<url-pattern>/VAADIN/*</url-pattern>
 	</servlet-mapping>
 
