change client id

--- a/wf-dniprorada/src/main/resources/bankID.properties
+++ b/wf-dniprorada/src/main/resources/bankID.properties
@@ -1,5 +1,5 @@
 checkBankIDUrl=https://bankid.privatbank.ua/DataAccessService/checked/fio?access_token=%s&client_id=%s
-systemClient=p48app
+systemClient=dniprorada
 firstNameElementName=firstName
 lastNameElementName=lastName
 middleNameElementName=middleName
