--- a/wf-dniprorada/src/main/webapp/WEB-INF/web.xml
+++ b/wf-dniprorada/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,12 @@
 		<filter-name>UIFilter</filter-name>
 		<filter-class>org.activiti.explorer.filter.ExplorerFilter</filter-class>
 	</filter>
-  
+
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
     <filter>
         <filter-name>JSONPFilter</filter-name>
         <filter-class>org.activiti.explorer.servlet.JsonpCallbackFilter</filter-class>
@@ -37,7 +42,12 @@
 		<filter-name>UIFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-  
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/service/*</url-pattern>
+    </filter-mapping>
+
     <filter-mapping>
         <filter-name>JSONPFilter</filter-name>
         <url-pattern>/service/*</url-pattern>
