--- a/wf-dniprorada/src/main/webapp/WEB-INF/web.xml
+++ b/wf-dniprorada/src/main/webapp/WEB-INF/web.xml
@@ -28,10 +28,10 @@
 		<filter-class>org.activiti.explorer.filter.ExplorerFilter</filter-class>
 	</filter>
 
-    <!--<filter>-->
-        <!--<filter-name>springSecurityFilterChain</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-    <!--</filter>-->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
 
     <filter>
         <filter-name>JSONPFilter</filter-name>
@@ -43,10 +43,10 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-    <!--<filter-mapping>-->
-        <!--<filter-name>springSecurityFilterChain</filter-name>-->
-        <!--<url-pattern>/service/*</url-pattern>-->
-    <!--</filter-mapping>-->
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/service/*</url-pattern>
+    </filter-mapping>
 
     <filter-mapping>
         <filter-name>JSONPFilter</filter-name>
