--- a/dashboard-js/package.json
+++ b/dashboard-js/package.json
@@ -10,12 +10,21 @@
     "serve-favicon": "~2.0.1",
     "cookie-parser": "~1.0.1",
     "express-session": "~1.0.2",
+    "passport": "~0.2.0",
+    "jsonwebtoken": "^0.3.0",
+    "passport-http-bearer": "1.0.1",
+    "passport-oauth2":"1.1.2",
+    "express-jwt": "^0.1.3",
     "errorhandler": "~1.0.0",
     "compression": "~1.0.1",
     "lodash": "~2.4.1",
     "ejs": "~0.8.4",
     "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.4.1"
+    "connect-mongo": "^0.4.1",
+    "external-ip":"0.2.3",
+    "request":"2.54.0",
+    "xml2js":"0.4.6",
+    "log4js":"0.6.22"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
