--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -235,6 +235,18 @@
 			<version>9.4-1201-jdbc41</version>
 		</dependency>
 
+        <!--Redis-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.2.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
 		<!-- Running example processes -->
 		<dependency>
