--- a/dashboard-js/bower.json
+++ b/dashboard-js/bower.json
@@ -12,6 +12,7 @@
     "angular-sanitize": ">=1.2.*",
     "angular-route": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
+    "ng-idle":"1.0.4",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1"
   },
