--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -8,7 +8,7 @@
 
 	<properties>
 		<spring-version>4.1.4.RELEASE</spring-version>
-		<jedis.redis.client>2.6.2</jedis.redis.client>
+		<jedis.redis.client>2.4.0</jedis.redis.client>
 		<cglib.version>2.2.2</cglib.version>
 		<guava-version>15.0</guava-version>
 		<junit-version>4.10</junit-version>
@@ -55,6 +55,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.2.1.RELEASE</version>
+        </dependency>
+        
 
 		<!-- required for @Configuration annotation -->
 		<dependency>
@@ -86,6 +93,12 @@
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang-version}</version>
 		</dependency>
+		
+		  <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+           <version>${spring-version}</version>
+        </dependency>
 
 
 		<!-- LOGGING -->
