--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -217,6 +217,13 @@
 			<artifactId>activiti-json-converter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<!-- REDIS-->
+		<dependency>
+			<groupId>org.activiti.redis</groupId>
+			<artifactId>wf-dniprorada-redis</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Database -->
 		<dependency>
@@ -235,18 +242,6 @@
 			<version>9.4-1201-jdbc41</version>
 		</dependency>
 
-        <!--Redis-->
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>1.2.1.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.4.0</version>
-        </dependency>
 
 		<!-- Running example processes -->
 		<dependency>
@@ -261,11 +256,6 @@
             <artifactId>spring-test</artifactId>
             <version>4.0.6.RELEASE</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.0.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
@@ -302,33 +292,7 @@
 			<artifactId>gwt-servlet</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-		
-		<!-- Spring security 
-		<dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>3.2.3.RELEASE</version>
-        </dependency>
- 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>3.2.3.RELEASE</version>
-        </dependency>
- 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>3.2.3.RELEASE</version>
-        </dependency>
- 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-taglibs</artifactId>
-            <version>4.0.0.RELEASE</version>
-        </dependency-->
-        
-        
+
 		<!-- Vaadin addons -->
 		<!-- Must be defined both in activiti-explorer and activiti-webapp-explorer, 
 			as otherwise the gwt compiler won't find it -->
