--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -249,6 +249,19 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.1.3</version>
 		</dependency>
+                
+        <!--Redis-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.2.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.4.0</version>
+        </dependency>        
 
 		<!-- Testing -->
         <dependency>
