--- a/wf-dniprorada/src/main/resources/log4j.properties
+++ b/wf-dniprorada/src/main/resources/log4j.properties
@@ -1,13 +1,6 @@
-#log4j.rootLogger=INFO, CA
+log4j.rootLogger=INFO, CA
 
 # ConsoleAppender
-#log4j.appender.CA=org.apache.log4j.ConsoleAppender
-#log4j.appender.CA.layout=org.apache.log4j.PatternLayout
-#log4j.appender.CA.layout.ConversionPattern= %d{hh:mm:ss,SSS} [%t] %-5p %c %x - %m%n
-
-log4j.rootLogger= SEVERE, file
-
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=/logs
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.CA=org.apache.log4j.ConsoleAppender
+log4j.appender.CA.layout=org.apache.log4j.PatternLayout
+log4j.appender.CA.layout.ConversionPattern= %d{hh:mm:ss,SSS} [%t] %-5p %c %x - %m%n
