--- a/redis/src/main/resources/redisProps.properties
+++ b/redis/src/main/resources/redisProps.properties
@@ -1,6 +1,6 @@
-redis.host=vm-kibana-pord.vm.pbank.com.ua
+redis.host=52.17.126.64
 redis.port=6379
-redis.password=
+redis.password=egovpassmazafaka
 redis.responseTimeLife=900
 redis.maxActive=500
 redis.maxIdle=250
