--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -39,7 +39,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<targetJdk>1.6</targetJdk>
 		<commons-lang-version>2.6</commons-lang-version>
-		<!-- <slf4j-version>1.6.2</slf4j-version> -->
+		 <!-- <slf4j-version>1.6.2</slf4j-version> -->
 
 		<!-- test setings -->
 		<skip.unit.test>true</skip.unit.test>
@@ -107,7 +107,7 @@
 		<!--	<artifactId>slf4j-api</artifactId> -->
 		<!-- 	<version>${slf4j-version}</version> -->
 		<!-- </dependency> -->
-		<dependency>
+		<!-- <dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j-version}</version>
@@ -116,7 +116,7 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4j-version}</version>
-			</dependency>
+			</dependency> -->
 		<!-- DEPENDENCIES FOR TESTING -->
 		<dependency>
 			<groupId>org.springframework</groupId>
