--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -324,4 +324,17 @@
 
 	</dependencies>
 	<version>5.17.0</version>
+	
+	<distributionManagement>
+		<repository>
+			<id>localNexus</id>
+			<name>localNexus</name>
+			<url>http://52.17.32.123:8081/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>localNexus</id>
+			<name>localNexus</name>
+			<url>http://52.17.32.123:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
