remove org.vaadin.addons depen
Signed-off-by: Inna <inna.dascenko@privatbank.ua>

--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -176,6 +176,12 @@
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-explorer</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.vaadin.addons</groupId>
+			<artifactId>dcharts-widget</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.activiti</groupId>
