--- a/auth/bankid-oauth-example/pom.xml
+++ b/auth/bankid-oauth-example/pom.xml
@@ -1,20 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ua.org.bankid</groupId>
+        <groupId>ua.org.bankid.oauth</groupId>
         <artifactId>bankid-oauth</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     
-    <groupId>ua.org.bankid.oauth.example</groupId>
     <artifactId>bankid-oauth-example</artifactId>
     <packaging>war</packaging>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>bankid-oauth-example</name>
 
     <build>
         <finalName>bankid-oauth-example</finalName>
     </build>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>ua.org.bankid.oauth</groupId>
+            <artifactId>bankid-oauth-weblib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
