--- a/auth/bankid-oauth-weblib/pom.xml
+++ b/auth/bankid-oauth-weblib/pom.xml
@@ -4,36 +4,27 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ua.org.bankid</groupId>
+        <groupId>ua.org.bankid.oauth</groupId>
         <artifactId>bankid-oauth</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-	<groupId>ua.org.bankid.oauth2</groupId>
 	<artifactId>bankid-oauth-weblib</artifactId>
-    <!--<version>1.0.0-SNAPSHOT</version>-->
-	<!--<packaging>jar</packaging>-->
-	<name>common oauth2 authorization</name>
 
 	<dependencies>
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-        </dependency>
 
         <!-- test dependencies -->
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
         </dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
+
 	</dependencies>
 
 </project>
