--- a/portal-php/public_html/design/package.json
+++ b/portal-php/public_html/design/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.5",
-	"grunt-html-build": "^0.4.3",
     "grunt-bower-concat": "^0.4.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-compress": "^0.13.0",
-    "grunt-contrib-copy": "^0.8.0"
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-git-deploy": "^0.1.1",
+    "grunt-html-build": "^0.4.3"
   }
 }
