--- a/portal-php/public_html/design/bower.json
+++ b/portal-php/public_html/design/bower.json
@@ -18,6 +18,7 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.4",
     "angular": "~1.3.15",
+	"angular-mocks": "~1.3.15",
     "angular-bootstrap": "~0.12.1",
     "angular-ui-router": "~0.2.13",
     "ui-router-extras": "~0.0.13",
