--- a/portal-php/public_html/design/package.json
+++ b/portal-php/public_html/design/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-git-deploy": "^0.1.1",
-    "grunt-html-build": "^0.4.3"
+    "grunt-html-build": "^0.4.3",
+    "grunt-html2js": "^0.3.2"
   }
 }
