[issue #123]: Change group name in poms

--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-	<groupId>org.e-gov.base</groupId>
+	<groupId>org.egov-ua.base</groupId>
 	<artifactId>wf-base</artifactId>
 	<version>{base.version}</version>
 	<packaging>jar</packaging>
