--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 
     <name>E-Government-UA</name>
 
-    <groupId>org.e-gov</groupId>
-    <artifactId>org.e-gov</artifactId>
+    <groupId>org.egov-ua</groupId>
+    <artifactId>org.egov-ua</artifactId>
     <packaging>pom</packaging>
-    <version>1.9</version>
+    <version>1.0</version>
 
     <properties>
         <!--our properties-->
