--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <junit.version>4.11</junit.version>
         <logback-core.version>1.0.9</logback-core.version>
         <logback-classic.version>1.0.9</logback-classic.version>
-        <mockito-core.version>1.9.0</mockito-core.version>
+        <mockito.version>1.9.0</mockito.version>
         <apache-commons-lang.version>3.1</apache-commons-lang.version>
         <apache-commons-collections.version>3.2.1</apache-commons-collections.version>
         <apache-commons-collections4.version>4.0</apache-commons-collections4.version>
@@ -40,11 +40,13 @@
         <redis.version>2.1.0</redis.version>
         <tomcat-jdbc.version>7.0.39</tomcat-jdbc.version>
         <h2.database.version>1.3.172</h2.database.version>
-        <springframework.version>4.0.2.RELEASE</springframework.version>
-        <cglib.version>2.2</cglib.version>
+        <springframework.version>4.1.4.RELEASE</springframework.version>
+        <cglib.version>2.2.2</cglib.version>
         <commons.codec.version>1.8</commons.codec.version>
         <hamcrest.version>1.1</hamcrest.version>
         <jsonassert.version>1.2.3</jsonassert.version>
+        <guava.version>15.0</guava.version>
+        <easymock.version>3.0</easymock.version>
     </properties>
 
     <distributionManagement>
@@ -62,13 +64,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
-                <type>jar</type>
-            </dependency>
+
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
@@ -81,13 +77,7 @@
                 <version>${logback-classic.version}</version>
                 <type>jar</type>
             </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>${mockito-core.version}</version>
-                <scope>test</scope>
-                <type>jar</type>
-            </dependency>
+
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -112,33 +102,14 @@
                 <version>${apache-commons-compress.version}</version>
                 <type>jar</type>
             </dependency>
-            <dependency>
-                <groupId>org.jmock</groupId>
-                <artifactId>jmock-junit4</artifactId>
-                <version>${jmock-unit.version}</version>
-                <scope>test</scope>
-                <type>jar</type>
-            </dependency>
-            <dependency>
-                <groupId>org.jmock</groupId>
-                <artifactId>jmock</artifactId>
-                <version>${jmock.version}</version>
-                <scope>test</scope>
-                <type>jar</type>
-            </dependency>
+
             <dependency>
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
                 <version>${redis.version}</version>
                 <type>jar</type>
             </dependency>
-            <dependency>
-                <groupId>org.apache.tomcat</groupId>
-                <artifactId>tomcat-jdbc</artifactId>
-                <version>${tomcat-jdbc.version}</version>
-                <scope>test</scope>
-                <type>jar</type>
-            </dependency>
+
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
@@ -151,7 +122,26 @@
                 <version>${commons.codec.version}</version>
             </dependency>
 
+            <!-- required for @Configuration annotation -->
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>${cglib.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <!-- Spring dependencies -->
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -167,10 +157,65 @@
                 <scope>compile</scope>
             </dependency>
 
+            <!-- Dependencies for test -->
+
             <dependency>
                 <groupId>org.springframework</groupId>
                 <version>${springframework.version}</version>
                 <artifactId>spring-test</artifactId>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jmock</groupId>
+                <artifactId>jmock-junit4</artifactId>
+                <version>${jmock-unit.version}</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jmock</groupId>
+                <artifactId>jmock</artifactId>
+                <version>${jmock.version}</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>tomcat-jdbc</artifactId>
+                <version>${tomcat-jdbc.version}</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.easymock</groupId>
+                <artifactId>easymock</artifactId>
+                <version>${easymock.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>cglib-nodep</artifactId>
+                        <groupId>cglib</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
         </dependencies>
