--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.egov-ua</groupId>
         <artifactId>org.egov-ua</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
