--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>org.egov-ua</groupId>
         <artifactId>org.egov-ua</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 	<groupId>org.egov-ua.base</groupId>
 	<artifactId>wf-base</artifactId>
-	<version>1.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 </project>
