--- a/auth/bankid-oauth-systests/pom.xml
+++ b/auth/bankid-oauth-systests/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+        </dependency>
+
+
         <!-- util dependencies -->
 
         <dependency>
