add Unit test for bp

--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -321,6 +321,26 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math</artifactId>
+			<version>2.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.plexiti.activiti</groupId>
+			<artifactId>activiti-fluent-tests</artifactId>
+			<version>0.3</version>
+			<scope>test</scope>
+		</dependency>
+		
+		
+		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
 			<version>2.3.0</version>
