edit get file name,content-type,exp
Signed-off-by: Inna <inna.dascenko@privatbank.ua>

--- a/redis/src/test/resources/test.properties
+++ b/redis/src/test/resources/test.properties
@@ -1,5 +1,5 @@
 version=${project.version}
 groupId=${project.groupId}
 artifactId=${project.artifactId}
-loadFile=.//src//test//resources//test.txt
-pathToFile=.//src//test//resources//test.txt
+loadFile=.//src//test//resources//ScreenHunter_102 Apr. 23 16.59.gif
+pathToFile=.//src//test//resources//ScreenHunter_102 Apr. 23 16.59.gif
