[issue #130]: configure Redis server in Vagrant

--- a/redis/src/main/resources/redisProps.properties
+++ b/redis/src/main/resources/redisProps.properties
@@ -6,6 +6,8 @@
 ##\u0431\u043e\u0435\u0432\u043e\u0439
 ##redis.host=127.0.0.1
 ##redis.port=6379
+#when using Redis running in VM from outside of VM
+#redis.host=192.168.10.10
 ##\u0432\u043d\u0443\u0442\u0440\u0435\u043d\u043d\u0438\u0439 (\u0440\u0430\u0431\u043e\u0442\u0430\u0435\u0442 \u0434\u043b\u044f \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e)
 redis.host=10.59.101.19
 redis.port=6379
