Add new active by default profile wf-all with all projects included.

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,22 @@
 
 	<profiles>
 		<profile>
+			<id>wf-all</id>
+
+			<modules>
+				<module>auth</module>
+				<module>redis</module>
+				<module>wf-base</module>
+				<module>wf-dniprorada</module>
+				<module>wf-central</module>
+			</modules>
+
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+
+		<profile>
 			<id>wf-dniprorada</id>
 
 			<modules>
@@ -73,10 +89,6 @@
 				<module>wf-base</module>
 				<module>wf-dniprorada</module>
 			</modules>
-
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
 		</profile>
 
 		<profile>
