--- a/wf-central/src/main/resources/db.properties
+++ b/wf-central/src/main/resources/db.properties
@@ -3,3 +3,9 @@ jdbc.driver=org.h2.Driver
 jdbc.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
 jdbc.username=sa
 jdbc.password=
+
+#db=postgresql
+#jdbc.driver=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql://localhost/postgres
+#jdbc.username=postgres
+#jdbc.password=123
