--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -3,6 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>org.egov-ua</groupId>
+		<artifactId>org.egov-ua</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<groupId>org.activiti</groupId>
 	<name>WorkFlows Central UA/</name>
 	<artifactId>wf-central</artifactId>
@@ -256,6 +262,15 @@
 			<version>9.4-1201-jdbc41</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
 
 		<!-- Running example processes -->
 		<dependency>
