--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -233,6 +233,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.spockframework</groupId>
+                <artifactId>spock-core</artifactId>
+                <version>1.0-groovy-2.4</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
