--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<janino.version>2.5.10</janino.version>
 		<jetty-servlet.version>8.0.0.M2</jetty-servlet.version>
 		<jaxb2-maven-plugin.version>1.5</jaxb2-maven-plugin.version>
-		<redis.version>2.1.0</redis.version>
+		<redis.version>2.4.0</redis.version>
 		<tomcat-jdbc.version>7.0.39</tomcat-jdbc.version>
 		<h2.database.version>1.3.172</h2.database.version>
 		<springframework.version>4.0.6.RELEASE</springframework.version>
@@ -64,6 +64,33 @@
 			<url>http://52.17.32.123:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>vaadin-addons</id>
+            <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+        <repository>
+            <id>repo1</id>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
+            <id>Central</id>
+            <url>http://central.maven.org/maven2</url>
+        </repository>
+        <repository>
+            <id>iGov_Nexus</id>
+            <url>http://52.17.32.123:8081/nexus/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>Activiti</id>
+            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>Activiti third party</id>
+            <url>http://maven.alfresco.com/nexus/content/repositories/activiti-thirdparty/</url>
+        </repository>
+    </repositories>
 
 	<profiles>
 		<profile>
