[issue #106]: Remove all properties from wb-base jar lib

--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -48,6 +48,11 @@
                 <configuration>
                     <jarName>${project.artifactId}-${project.version}</jarName>
                     <classifier>lib</classifier>
+                    <excludes>
+                        <exclude>*.properties</exclude>
+                        <exclude>*.alfresco</exclude>
+                        <exclude>*.json</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
