--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 		<guava.version>15.0</guava.version>
 		<easymock.version>3.0</easymock.version>
 		<hibernate.version>4.3.9.Final</hibernate.version>
+		<log4j.version>1.2.17</log4j.version>
 		<liquibase.version>3.3.3</liquibase.version>
 		<java.object.merger.version.version>0.8.5.1</java.object.merger.version.version>
 	</properties>
@@ -248,6 +249,13 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate.version}</version>
+			</dependency>
+
+			<!-- WARNING! Last version of log4j is needed for hibernate!-->
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 
 			<dependency>
