#177 correct timestamp format, format for morgan logger

--- a/dashboard-js/project.json
+++ b/dashboard-js/project.json
@@ -51,6 +51,15 @@
 		"folder_exclude_patterns": [
 
 		],
+		"name": "Dist",
+		"path": "dist"
+	}, {
+		"file_exclude_patterns": [
+
+		],
+		"folder_exclude_patterns": [
+
+		],
 		"name": "Root",
 		"path": "../"
 	}],
