149 : Implement Spring facade for Mongo

--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -214,6 +214,12 @@
             <artifactId>wf-dniprorada-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.egov-ua</groupId>
+		    <artifactId>org.egov-ua.storage.durable</artifactId>
+		    <version>1.0-SNAPSHOT</version>
+		</dependency>
 
         <!-- Database -->
         <dependency>
