--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 
 			<modules>
 				<module>auth</module>
+				<module>storage</module>
 				<module>redis</module>
 				<module>wf-base</module>
 				<module>wf-dniprorada</module>
@@ -116,6 +117,7 @@
 
 			<modules>
 				<module>auth</module>
+				<module>storage</module>
 				<module>redis</module>
 				<module>wf-base</module>
 				<module>wf-dniprorada</module>
@@ -127,6 +129,7 @@
 
 			<modules>
 				<module>auth</module>
+				<module>storage</module>
 				<module>redis</module>
 				<module>wf-base</module>
 				<module>wf-central</module>
