--- a/wf-central/pom.xml
+++ b/wf-central/pom.xml
@@ -9,10 +9,8 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>org.activiti</groupId>
 	<name>WorkFlows Central UA/</name>
 	<artifactId>wf-central</artifactId>
-	<version>5.17.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<properties>
@@ -20,13 +18,24 @@
 		<activity.version>5.17.0</activity.version>
 	</properties>
 
-
+	<!-- distributionManagement>
+		<repository>
+			<id>localNexus</id>
+			<name>localNexus</name>
+			<url>http://52.17.32.123:8081/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>localNexus</id>
+			<name>localNexus</name>
+			<url>http://52.17.32.123:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<repositories>
 		<repository>
 			<id>vaadin-addons</id>
 			<url>http://maven.vaadin.com/vaadin-addons</url>
 		</repository>
-	</repositories>
+	</repositories-->
 
 	<build>
 		<plugins>
@@ -370,16 +379,5 @@
 
 
 	</dependencies>
-	<distributionManagement>
-		<repository>
-			<id>localNexus</id>
-			<name>localNexus</name>
-			<url>http://52.17.32.123:8081/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>localNexus</id>
-			<name>localNexus</name>
-			<url>http://52.17.32.123:8081/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
+
 </project>
