--- a/wf-dniprorada/pom.xml
+++ b/wf-dniprorada/pom.xml
@@ -9,10 +9,8 @@
     </parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.activiti</groupId>
 	<name>WorkFlows DniproRada UA/</name>
 	<artifactId>wf-dniprorada</artifactId>
-	<version>5.17.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<properties>
@@ -20,6 +18,19 @@
 		<activity.version>5.17.0</activity.version>
 		<guava-version>15.0</guava-version>
 	</properties>
+
+	<!-- distributionManagement>
+		<repository>
+			<id>localNexus</id>
+			<name>localNexus</name>
+			<url>https://nexus.e-gov.org.ua/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>localNexus</id>
+			<name>localNexus</name>
+			<url>https://nexus.e-gov.org.ua/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<repositories>
             
@@ -53,7 +64,7 @@
                 </repository>     
                 
                 
-	</repositories>
+	</repositories-->
 
 	<build>
 		<plugins>
@@ -382,19 +393,6 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
-
 	</dependencies>
-	<distributionManagement>
-		<repository>
-			<id>localNexus</id>
-			<name>localNexus</name>
-			<url>http://52.17.32.123:8081/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>localNexus</id>
-			<name>localNexus</name>
-			<url>http://52.17.32.123:8081/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
+
 </project>
